@@ -15,6 +15,7 @@ ENABLED += -DENABLE_CLOCK
 ENABLED += -DENABLE_SCRIPTING
 ENABLED += -DENABLE_SIGNALS
 ENABLED += -DENABLE_MULTICORE
+ENABLED += -DENABLE_FFI
 
 all: build
 
